--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/glasses-website/assets/main-ab07815e.js"></script>
-    <link rel="stylesheet" href="/glasses-website/assets/main-5f31dd49.css">
+    <script type="module" crossorigin src="/glasses-website/assets/main-9764eada.js"></script>
+    <link rel="stylesheet" href="/glasses-website/assets/main-20e69835.css">
   </head>
   <body>
     <header >
@@ -29,7 +29,46 @@
 <!-- <a href="index.html">index</a>
 <a href="about.html">about</a>
 <a href="contact.html">contact</a> -->    <h1>我是contact</h1>
-    <footer class="footer">我是 footer</footer>
+    <footer>
+    <div class="footer-group container">
+      <div class="footer-group-top">
+        <div class="footer-group-left">
+          <ul class="footer-linkBar">
+            <li><a href="#">首頁</a></li>
+            <li><a href="#">系列鏡框</a></li>
+            <li><a href="#">門市據點</a></li>
+            <li><a href="#">部落格</a></li>
+            <li><a href="#">常見問題</a></li>
+          </ul>
+          <div>
+            <i class="fa-solid fa-phone" style="color: #ffffff;"></i>
+            <a href="tel:+886800-000-000">0800-000-000</a>
+          </div>
+          <div>
+            <i class="fa-regular fa-envelope" style="color: #ffffff;"></i>
+            <a href="glasses@business.com" target="_blank">glasses@business.com</a>
+          </div>
+
+        </div>
+        
+        <ul class="sns-link">
+          <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook" ></i></a></li>
+          <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram" ></i></a></li>
+          <li><a href="https://developers.line.biz/ja/services/line-login/" target="_blank"><i class="fa-brands fa-line" ></i></a></li>
+        </ul>
+      </div>
+      <div class="footer-group-bottom">
+        <p>Copyright © 2020 Glasses.All rights reserved.</p>
+        <div class="footer-group-bottom-txt">
+          <p>隱私權政策</p>
+          <p>服務條款</p>
+        </div>
+
+      </div>
+
+    </div>
+
+  </footer>
     
   </body>
 </html>
