修改款式頁css

--- a/pages/glassesStyle.html
+++ b/pages/glassesStyle.html
@@ -19,11 +19,10 @@
     </section>
 
     <section class="product-group p-tb-80 container">
-      <div class="product-title">
-        <p class="product-title-big">2020 NEW COLLECTION</p>
-        <p>賽璐珞鈦金屬混合鏡框</p>
-      </div>
       
+      <p >2020 NEW COLLECTION</p>
+      <p>賽璐珞鈦金屬混合鏡框</p>
+            
       <div class="product-items">
         <ul class="product-card">
           <li><img src="/assets/images/product-7.png" alt=""></li>
