--- a/glassesStyle.html
+++ b/glassesStyle.html
@@ -12,8 +12,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap" rel="stylesheet">
 <!-- icons -->
-<script src="https://kit.fontawesome.com/2b34f8a7fa.js" crossorigin="anonymous"></script>    <script type="module" crossorigin src="/glasses-website/assets/main-0761a290.js"></script>
-    <link rel="stylesheet" href="/glasses-website/assets/main-db00adfc.css">
+<script src="https://kit.fontawesome.com/2b34f8a7fa.js" crossorigin="anonymous"></script>    <script type="module" crossorigin src="/glasses-website/assets/main-e3d31f7b.js"></script>
+    <link rel="stylesheet" href="/glasses-website/assets/main-ea2a2a18.css">
   </head>
   <body>
     <header >
@@ -54,11 +54,10 @@
     </section>
 
     <section class="product-group p-tb-80 container">
-      <div class="product-title">
-        <p class="product-title-big">2020 NEW COLLECTION</p>
-        <p>賽璐珞鈦金屬混合鏡框</p>
-      </div>
       
+      <p >2020 NEW COLLECTION</p>
+      <p>賽璐珞鈦金屬混合鏡框</p>
+            
       <div class="product-items">
         <ul class="product-card">
           <li><img src="/glasses-website/assets/product-7-d12814bd.png" alt=""></li>
